# python-project-83

./: .gitignore  README.md  build.sh  database.sql  makefile  pyproject.toml
page_analyzer/: __init__.py  app.py  database.sql  generate_key.py  make_sql.py  parser.py  requests.py  sql_queries.py  urls.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  list_urls.html  show_url.html
templates/: index.html  list_urls.html  show_url.html
